--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ table.TableGrid
 		<span lang="en-us"><font face="Calibri" size="5" color="#0000FF">
 		<b>Simulation of Atmospheric Visibility Impairment</b></font></span><p class="text">
 		<span lang="en-us"><font face="Calibri" size="4" color="#0000FF">
-		Anqi Zhu<sup>1</sup>,&nbsp;Lin Zhang*</font></span><font face="Calibri" size="4" color="#0000FF"><sup>1</sup><span lang="en-us">, 
+		Lin Zhang<sup>1</sup>,&nbsp;Anqi Zhu</font></span><font face="Calibri" size="4" color="#0000FF"><sup>1</sup><span lang="en-us">, 
 		Shiyu Zhao</span><sup>1</sup><span lang="en-us">,
 		Shengjie Zhao</span><sup>1</sup><span lang="en-us">, 
 		Yicong Zhou</span><sup>2</sup></font>
@@ -113,7 +113,7 @@ We qualitatively compare AVID and the relevant datasets in the literature. It ca
 <p><span lang="en-us"><b><font face="Calibri" size="5">Source Codes and Data</font></b></span></p>
 <p>
 <span lang="en-us"><font face="Calibri" style="font-size: 13pt"> 
-<a href="https://github.com/aaaaangel/Pedestrian360">Get the code and data. </a></font></span></p>
+<a href="https://pan.baidu.com/s/1o2jHpz9lxE9wDTvm1KMi1g">Get the code and data. </a> extract code: xhtq</font></span></p>
 
 <hr>
 
