--- a/index.html
+++ b/index.html
@@ -117,6 +117,17 @@ We qualitatively compare AVID and the relevant datasets in the literature. It ca
 
 <hr>
 
+<p> 
+<span lang="en-us"><font face="Calibri" style="font-size: 13pt"> 
+<a>
+Here are video examples of AVID:
+</a></font></span></p>
+
+<video height="300" controls="controls">
+  <source src="cut1.mp4" type="video/mp4" />
+  </object>
+</video>
+
 <p align="justify"><font face="Calibri">Last update: <span lang="en-us">Dec. 1,
 </span>202<span lang="en-us">0</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></p>
 </body>
